[gd_scene load_steps=4 format=3 uid="uid://ilveashvrfd"]

[ext_resource type="Script" uid="uid://dtc4si312t8ke" path="res://reward/ship_shell/ship_reward_shell.gd" id="1_2pntk"]
[ext_resource type="Texture2D" uid="uid://bn5m4emn00njs" path="res://_assets/kyle/dust.png" id="2_772xn"]
[ext_resource type="Texture2D" uid="uid://bk803hmjyl787" path="res://_assets/ui_green/square481.png" id="3_echwo"]

[node name="ShipRewardShell" type="CenterContainer"]
script = ExtResource("1_2pntk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_772xn")

[node name="Hover" type="CenterContainer" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Hover"]
layout_mode = 2

[node name="Hover" type="TextureRect" parent="Hover/VBoxContainer"]
z_index = 1
layout_mode = 2
texture = ExtResource("3_echwo")
stretch_mode = 3

[node name="Label" type="Label" parent="Hover/VBoxContainer"]
z_index = 1
layout_mode = 2
text = "Apply reward "

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
